[gd_scene load_steps=2 format=3 uid="uid://ceh01a03sno5w"]

[ext_resource type="Script" path="res://Shared/TitleScreen/SettingsScreen.gd" id="1_lk7k1"]

[node name="SettingsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lk7k1")

[node name="VolumeControlsVBox" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 1142.0
offset_bottom = 638.0
alignment = 1

[node name="MasterVolumeHBox" type="HBoxContainer" parent="VolumeControlsVBox"]
layout_mode = 2
alignment = 1

[node name="MasterVolumeLabel" type="Label" parent="VolumeControlsVBox/MasterVolumeHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume:"
horizontal_alignment = 1

[node name="MasterVolumeSlider" type="HSlider" parent="VolumeControlsVBox/MasterVolumeHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
max_value = 1.0
step = 0.1
value = 1.0
tick_count = 11

[node name="MasterVolumePercentageLabel" type="Label" parent="VolumeControlsVBox/MasterVolumeHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MusicVolumeHBox" type="HBoxContainer" parent="VolumeControlsVBox"]
layout_mode = 2
alignment = 1

[node name="MusicVolumeLabel" type="Label" parent="VolumeControlsVBox/MusicVolumeHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume:"
horizontal_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="VolumeControlsVBox/MusicVolumeHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
max_value = 1.0
step = 0.1
value = 1.0
tick_count = 11

[node name="MusicVolumePercentageLabel" type="Label" parent="VolumeControlsVBox/MusicVolumeHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EffectsVolumeHBox" type="HBoxContainer" parent="VolumeControlsVBox"]
layout_mode = 2
alignment = 1

[node name="EffectsVolumeLabel" type="Label" parent="VolumeControlsVBox/EffectsVolumeHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Effects Volume:"
horizontal_alignment = 1

[node name="EffectsVolumeSlider" type="HSlider" parent="VolumeControlsVBox/EffectsVolumeHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
max_value = 1.0
step = 0.1
value = 1.0
tick_count = 11

[node name="EffectsVolumePercentageLabel" type="Label" parent="VolumeControlsVBox/EffectsVolumeHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UIVolumeHBox" type="HBoxContainer" parent="VolumeControlsVBox"]
layout_mode = 2
alignment = 1

[node name="UIVolumeLabel" type="Label" parent="VolumeControlsVBox/UIVolumeHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "UI Volume:"
horizontal_alignment = 1

[node name="UIVolumeSlider" type="HSlider" parent="VolumeControlsVBox/UIVolumeHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
max_value = 1.0
step = 0.1
value = 1.0
tick_count = 11

[node name="UIVolumePercentageLabel" type="Label" parent="VolumeControlsVBox/UIVolumeHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="."]
layout_mode = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 105.0
offset_bottom = 54.0
text = "Back"

[connection signal="value_changed" from="VolumeControlsVBox/MasterVolumeHBox/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="VolumeControlsVBox/MusicVolumeHBox/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="VolumeControlsVBox/EffectsVolumeHBox/EffectsVolumeSlider" to="." method="_on_effects_volume_slider_value_changed"]
[connection signal="value_changed" from="VolumeControlsVBox/UIVolumeHBox/UIVolumeSlider" to="." method="_on_ui_volume_slider_value_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
